--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-course_name: History of Magic
-course_description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare aliquam mattis. Donec hendrerit sollicitudin urna. Aliquam venenatis rutrum velit, at lobortis dui cursus a. Nam varius metus in turpis maximus, ut rhoncus tellus dictum. In aliquam tortor nec mi dapibus, sit amet vehicula dolor auctor."
-course_semester: "Fall 1998"
+course_name: Engineering English
+course_description: "Welcome to the website! Hope your contributions!"
+course_semester: "Fall 2025"
 
 baseurl: "/SWJTU-Leeds-Joint-School" # the subpath of your site, e.g. /blog/
 url: "http://lhannnn.github.io" # the base hostname & protocol for your site
@@ -11,9 +11,9 @@ schoolurl: "https://hogwarts.edu"
 twitter_username: username 
 
 address: |
-    School of Witchcraft and Wizardry
-    Hogwarts
-    Scotland
+    SWJTU-Leeds Joint School
+    Southwest Jiontong University
+    University of Leeds
 
 # Set your Google Analytics tracking ID (set up yours at http://www.google.com/analytics/)
 # google_analytics: UA-XXXXXXXX-X
