--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ course_semester: "Fall 2025"
 baseurl: "/SWJTU-Leeds-Joint-School" # the subpath of your site, e.g. /blog/
 url: "http://lhannnn.github.io" # the base hostname & protocol for your site
 
-schoolname: "SWJTU-Leeds-Joint-School"
-schoolurl: "https://hogwarts.edu"
+schoolname: "SWJTU-Leeds Joint School"
+schoolurl: "https://leeds.swjtu.edu.cn/"
 twitter_username: username 
 
 address: |
